2006-01-22  Brent Smith  <gnome@nextreality.net>

	* yelp.desktop.in.in:
	Add "GTK" to the categories in the .desktop file; fixes
	#328045

2006-01-21  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-io-channel.c: 
	* src/yelp-info-parser.c: 
	Look for multi-part info files in INFOPATH
	Make loading from non-compressed {info,man} files work
	
	* src/yelp-toc-pager.c:
	Change g_str_concat to g_strdup_printf in translated string
	Fixes #327953

2006-01-20  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc-pager.c: 
	Fix crashes on malformed info:dir files

2006-01-19  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/Makefile.am: 
	* configure.in: 
	Patch from Glynn Foster to fix more compilation 
	issues on Solaris
	
==================== 2.13.3 ====================

2006-01-18  Don Scorgie  <dscorgie@cvs.gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.13.3

2006-01-18  Don Scorgie  <dscorgie@cvs.gnome.org>

	* stylesheets/toc2html.xsl: 
	* src/yelp-toc-pager.c: 
	Make TOC pages XHML stric compliant
	
2006-01-17  Don Scorgie  <dscorgie@cvs.gnome.org>

	* configure.in: 
	Add appropriate CFLAGS when using Beagle search

2006-01-16  Brent Smith  <gnome@nextreality.net>

	* configure.in:
	Patch from Glynn Foster to fix compilation issues
	on Sun Studio

2006-01-16  Don Scorgie  <dscorgie@cvs.gnome.org>

	* configure.in:
	* src/yelp-base.h:
	* idl/GNOME_Yelp.idl:
	* src/yelp-main.c:
	* src/yelp-base.c:
	Add startup notification stuff, fixes #310237

2006-01-15 Christian Persch <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Updated from Epiphany: correct gecko version check
	if mozilla-config.h includes other files (multi-arch).

2006-01-15  Don Scorgie  <dscorgie@cvs.gnome.org>

	* data/ui/yelp.glade: 
	* src/yelp-window.c: 
	* src/gtkentryaction.c: 
	Patch from Dennis Cranston for several HIG issues
	Add mnemonics to find and search labels Fixes #326134
	
	* src/yelp-utils.c: 
	Add /usr/local/info and /usr/local/share/info to default infopaths
