@@ -1,5 +1,12 @@
 2006-01-22  Brent Smith  <gnome@nextreality.net>
 
+	* src/yelp-gecko-utils.cpp:
+	* src/yelp-settings.c: (yelp_settings_get_font):
+	Added more robust error handling for gconf related
+	issues, fixes #327826
+
+2006-01-22  Brent Smith  <gnome@nextreality.net>
+
 	* yelp.desktop.in.in:
 	Add "GTK" to the categories in the .desktop file; fixes
 	#328045
